--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.21.5
-pandas==1.4.4
+pandas==1.3.5
 pathlib==1.0.1
 pip==22.2.2
 requests==2.28.1
@@ -12,6 +12,6 @@ matplotlib==3.5.2
 Opencv-python==4.6.0.66
 tensorflow==2.11.0
 protobuf==3.19.6
-sklearn==0.0.post1
+streamlit_lottie==0.0.3
 seaborn==0.11.2
 streamlit_option_menu==0.3.2
